--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "last-fm-badge",
   "private": true,
   "scripts": {
+    "dev": "nodemon",
     "lint": "run-s -cn lint:*",
     "lint:eslint": "eslint . --ext .js",
     "lint:prettier": "prettier --check **/*.{json,yml,yaml,md}",
@@ -9,7 +10,12 @@
     "fmt:eslint": "yarn lint:eslint --fix",
     "fmt:prettier": "yarn lint:prettier --write"
   },
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^0.20.0",
+    "koa": "^2.13.0",
+    "koa-router": "^9.1.0",
+    "koa-static": "^5.0.0"
+  },
   "devDependencies": {
     "@arkweid/lefthook": "0.7.2",
     "@commitlint/cli": "11.0.0",
@@ -17,8 +23,11 @@
     "@commitlint/config-lerna-scopes": "11.0.0",
     "@shopify/eslint-plugin": "38.0.0",
     "@shopify/prettier-config": "1.1.1",
+    "@types/koa": "^2.11.4",
+    "@types/koa-router": "^7.4.1",
     "eslint": "7.8.1",
     "jest": "26.4.2",
+    "nodemon": "^2.0.4",
     "npm-run-all": "4.1.5",
     "prettier": "2.1.1",
     "prettier-plugin-optipack": "^1.1.2",
