--- a/.optipackrc
+++ b/.optipackrc
@@ -1,5 +1,5 @@
 {
   "scripts": {
-    "order": ["build", "test", "clean", "lint", "fmt"]
+    "order": ["dev", "build", "test", "clean", "lint", "fmt"]
   }
 }
