--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "fmt:prettier": "yarn lint:prettier --write"
   },
   "dependencies": {
-    "axios": "^0.20.0",
-    "koa": "^2.13.0",
-    "koa-static": "^5.0.0"
+    "axios": "^0.20.0"
   },
   "devDependencies": {
     "@arkweid/lefthook": "0.7.2",
@@ -22,10 +20,9 @@
     "@commitlint/config-conventional": "11.0.0",
     "@shopify/eslint-plugin": "38.0.0",
     "@shopify/prettier-config": "1.1.1",
-    "@types/koa": "^2.11.4",
+    "@vercel/node": "^1.8.2",
     "eslint": "7.8.1",
     "jest": "26.4.2",
-    "nodemon": "^2.0.4",
     "npm-run-all": "4.1.5",
     "prettier": "2.1.1",
     "prettier-plugin-optipack": "^1.1.2",
@@ -33,6 +30,7 @@
     "ts-jest": "26.3.0",
     "ts-node": "9.0.0",
     "tsconfig-paths": "3.9.0",
-    "typescript": "3.9.7"
+    "typescript": "3.9.7",
+    "vercel": "^20.1.0"
   }
 }
